fix(exercizer): #WB-740, ellipsis, spacing article 1D-2D, image size edit subject

--- a/specifics/exercizer/_exercizer.scss
+++ b/specifics/exercizer/_exercizer.scss
@@ -138,6 +138,8 @@ body.exercizer {
 
   .image-select-radius img {
     border-radius: 4px;
+    height: 160px;
+    object-fit: cover;
   }
 
   .base-image {
@@ -254,7 +256,8 @@ body.exercizer {
   }
 
   article {
-    padding: 1.6rem;
+    margin-bottom: 1.5rem;
+    padding: 1.5rem;
     border-radius: .5rem;
     transition: z-index 0s 0.35s;
     box-shadow: 0 2px 6px rgba($color: #000000, $alpha: .1);
